app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 */


//  app/assets/fonts/SnellRoundhandScriptV1.woff
 
// Custom Boostratp Variables must be imported before bootstrap
@import "bootstrap";

// custom Stylesheet Import links



// General Text Styles

@font-face {
  font-family:'SnellRoundhand';
  src: font-url('SnellRoundhandScriptV1.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}

@mixin headings {
  h1, h2, h3,
  h4, h5, h6 {
      @content;
  }
}

h1 {
  font-size: 5.9vh;
}

h2 {
  font-size: 4.0vh;
}
h3 {
  font-size: 3.6vh;
}
h4 {
  font-size: 3.2vh;
}
h5 {
  font-size: 2.5vh;
}
p {
  font-size: 1.8vh;
}

@include headings {
  font-family: 'SnellRoundhand';
  z-index: 100;
}

a {
  color: #000000;
}

a span {
  color: #000000;
}

.center {
  text-align: center;
}

.left-margin {
  margin-left: 50px;
}

.flash {
  display: inline-block;
  background: #f9f8ea;
}

.flash-wrap {
  display: flex;
  justify-content: center;
  align-items: center;
}

.content {
  min-height: calc(100vh - 570px);
}


// Custom Scrollbar

body::-webkit-scrollbar {
  width: 1em;
}
 
body::-webkit-scrollbar-track {
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}
 
body::-webkit-scrollbar-thumb {
  background-color: darkgrey;
  outline: 1px solid slategrey;
}

// Header styles

.header-container {
  position: relative;
}

.header-image {
  padding: 5px;
  border-radius: 10px;
  display: block;
  margin-left: auto;
  margin-right: auto;
  min-width: 400px;
  width: 100%;
  height: 400px;
  object-fit: cover;
  opacity: 0.35;
}

.header-top-left {
  position: absolute;
  padding-bottom: 100px;
  top: 34px;
  left: 16px;
  font-size: 6vw;
  line-height: 65px;
  min-width: 400px;
  font-family: 'SnellRoundhand', cursive;
}
.authentication-text {
  display: inline-block;
}

.authentication-position {
  position: absolute;
  top: 15px;
  right: 10px;
}

// Avatars

.avatar-tiny {
  width: 24px;
  height: 24px;
  padding: 1px;
  border-radius: 5px;
  object-fit: cover;
}

.avatar {
  width: 100px;
  height: 100px;
  padding: 1px;
  border-radius: 25px;
  object-fit: cover;
}

// non-card product images

.product-image {
  height: 100px;
  padding: 1px;
  border-radius: 10px;
  object-fit: cover;
}

.product-image-tiny {
  width: 75px;
  height: 75px;
  padding: 1px;
  border-radius: 5px;
  object-fit: cover;
  margin-top: 10px;
}

// Footer Styles

// Navbar Styles

@media only screen and (max-width: 480px) {
  .hidden-xs-hover {
    visibility: hidden;
  }
}

// Home Page Styles

.welcome-sub-header {
  text-align: center;
}


.welcome-sub-header > h4 {
  // font-size: 30px;
  color: rgba(37, 37, 37, 0.416);
}

// Product card

.products {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
  // grid-template-columns: repeat(3, minmax(auto, 1fr));
  grid-gap: 10px;
  align-items: center;
  justify-content: center;
  justify-items: stretch;
  // min-width: 375px;
  // min-height: 415px;
  
  & > h3 {
    grid-column: 1 / -1;
  }
  
  // & > ul {
  //   list-style-type: none;
  // }
  
  // & > ul > li {
  //   font-family: 'SnellRoundhand';
  //   border: 1px solid #ccc;
  //   border-radius: .3rem;
  // }

}

.card {
  // position: relative;
  padding: 10px;
  min-width: 375px;
  height: 415px;
  background-color: white;
  padding: 0% 0% 0% 0%;
  padding-bottom: 1px;
  border-radius: 5px;
  border: 1.5px solid #CBCBCB;
  border-top: 3px solid #419234;
  text-align: center;
  overflow: hidden;
  justify-self: stretch;
  // min-width: none;
}

.card-image {
  display: block;
  padding: 1px;
  border-radius: 5px;
  min-width: 100%;
  height: 300px;
  object-fit: cover;
  justify-self: stretch;
}

.card-image-not-found {
  padding: 1px;
  // min-width: 200px;
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 35px;
  justify-self: stretch;
}

.card-image-not-found-sm {
  width: 75px;
  height: 75px;
  padding: 1px;
  border-radius: 5px;
  object-fit: cover;
  margin-top: 10px;
}

.card-text-up {
  position: relative;
  margin-top: -18px;
  margin-bottom: -15px;
}

.card-text-up-most-rev { // May be eliminated
  position: relative;
  margin-top: -20px;
  margin-bottom: -4px;
}

// Product Card Show

.card-show {
  // position: relative;
  padding: 10px;
  width: 800px;
  height: 600px;
  background-color: white;
  padding: 0% 0% 0% 0%;
  padding-bottom: 1px;
  border-radius: 5px;
  border: 1.5px solid #CBCBCB;
  border-top: 3px solid #419234;
  text-align: center;
  overflow: hidden;
  // min-width: none;
}

.card-show-up {
  position: relative;
  margin-top: -12px;
  // margin-bottom: -15px;
}

.card-show-flex {
  display: flex;
  justify-content: space-around;
}

.card-show-col1 {
  order: 1;
}

.card-show-col2 {
  order: 2;
}

.product-show-text-up {
  margin-top: -40px;
  margin-bottom: -15px;
}

.card-image-show {
  padding: 1px;
  border-radius: 5px;
  width: 800px;
  height: 100%;
  object-fit: cover;
}

// User Forms

.user-form-flex-container {
  padding: 2rem;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.form-col-1 {
  order: 1;
  border: 1px;
  max-width: 400px;
  flex-basis: fit-content;
}

.form-col-2 {
  order: 2;
  border: 1px;
  max-width: 230px;
  flex-basis: fit-content;
  margin-left: 40px;
}
/* ... */

